Final Project Turn In

--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -62,7 +62,7 @@ article{
     background-color: #328EE8;
     
 }
-.body{
+body{
     background-color: #328EE8;
 }
 
@@ -108,7 +108,7 @@ article{
 }
 
 footer{
-    background:#eee;
+    background:#;
 }
 
 .jumbotron{
